[package]
name = "safc"
version = "0.1.0"
edition = "2021"
default-run = "safc_bot"

[[bin]]
name = "safc_bot"
path = "src/main.rs"

[[bin]]
name = "safc_web"
path = "src/web.rs"


[lib]
name = "safc"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# bot
teloxide = { version = "0.12", features = ["macros"] }
log = "0.4"
pretty_env_logger = "0.5"
tokio = { version =  "1.8", features = ["rt-multi-thread", "macros"] }
sha2 = "0.10"
hex = "0.4"
strum = { version = "0.25", features = ["derive"] }
strum_macros = "0.25"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# web
actix-web = "4" 

# database
# `bundled` causes us to automatically compile and link in an up to date
# version of SQLite for you. This avoids many common build issues, and
# avoids depending on the version of SQLite on the users system (or your
# system), which may be old or missing. It's the right choice for most
# programs that control their own SQLite databases.
#
# That said, it's not ideal for all scenarios and in particular, generic
# libraries built around `rusqlite` should probably not enable it, which
# is why it is not a default feature -- it could become hard to disable.
rusqlite = { version = "0.29.0", features = ["bundled"] }