[package]
name = "safc"
version = "0.1.0"
edition = "2021"
default-run = "safc_bot"
license = "GPL-3.0-or-later"
homepage = "https://framist.github.io/safc/"
repository = "https://github.com/framist/SAFC-bot"
keywords = ["SAFC", "telegram"]
categories = ["web-programming::http-server"]   # todo
readme = "README.md"

# 发布 crate 参考：https://course.rs/cargo/reference/publishing-on-crates.io.html

[[bin]]
name = "safc_bot"
path = "src/main.rs"

[[bin]]
name = "safc_web"
path = "src/bin/web.rs"


[lib]
name = "safc"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# bot
teloxide = { version = "0.12", features = ["macros"] }
log = "0.4"
tokio = { version = "1.8", features = ["rt-multi-thread", "macros"] }
sha2 = "0.10"
hex = "0.4"
strum = { version = "0.25", features = ["derive"] }
strum_macros = "0.25"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.4"

# web
actix-web = "4"
actix-cors = "0.6"

# database
rusqlite = { version = "0.29.0", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "0.22"
lazy_static = "1.4.0"

# env
dotenv = "0.15"
env_logger = "0.10"
pretty_env_logger = "0.5"
